fixed comments after review